Tidy up warnings and rev to java 17